<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference android:title="@string/pref_title_editPassword"
        android:defaultValue=""
        android:summary="@string/pref_summary_editPassword"
        android:key="newpassword">
    </EditTextPreference>

    <ben_and_asaf_ttp.thetownproject.customDialogs.VolumeBarPreference
        android:title="@string/pref_title_bgVolumeBar"
        android:defaultValue="1.0f"
        android:summary="@string/pref_summary_bgVolumeBar"
        android:key="bgVolume" />

    <ben_and_asaf_ttp.thetownproject.customDialogs.VolumeBarPreference
        android:title="@string/pref_title_fxVolumeBar"
        android:defaultValue="1.0f"
        android:summary="@string/pref_summary_fxVolumeBar"
        android:key="fxVolume" />

</PreferenceScreen>