<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ben_and_asaf_ttp.thetownproject.MainActivity"
    android:background="@drawable/bgsmall">

<FrameLayout
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Player"
                android:id="@+id/lobby_txt_player"
                android:layout_weight="0"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:paddingBottom="100dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lobby_btn_joinGame"
                android:textColor="@android:color/white"
                android:id="@+id/lobby_btn_joinGame"
                android:background="@drawable/round_button_small"
                android:layout_margin="2dp"
                android:layout_weight="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lobby_btn_stats"
                android:textColor="@android:color/white"
                android:id="@+id/lobby_btn_stats"
                android:background="@drawable/round_button_small"
                android:layout_margin="2dp"
                android:layout_weight="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lobby_btn_options"
                android:textColor="@android:color/white"
                android:id="@+id/lobby_btn_options"
                android:background="@drawable/round_button_small"
                android:layout_margin="2dp"
                android:layout_weight="0" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>

    <!-- The navigation drawer -->
<ListView android:id="@+id/left_drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:background="@drawable/blood" />

</android.support.v4.widget.DrawerLayout>
